# veto

./: .dockerignore  .env.example  .gitignore  Cargo.toml  DEPLOY.md  Justfile  README.md  build-client.bat  deny.toml  deploy.sh  docker-compose.local.yml  docker-compose.prod.yml  docker-compose.yml  generate-icons.mjs  install.sh  package-lock.json  veto_server.example.py
.cargo/: audit.toml
.github/workflows/: build.yml  ci.yml
admin-ui/: index.html  package-lock.json  package.json  vite.config.js
admin-ui/src/: App.svelte
admin-ui/src/lib/: UserForm.svelte  UserList.svelte  api.js
backup/: backup.sh  restore.sh  rotate.sh
messenger-app/: index.html  package-lock.json  package.json  vite.config.js
messenger-app/src/: App.svelte  stores.js  styles.css
messenger-app/src-tauri/: Cargo.toml  tauri.conf.json
messenger-app/src-tauri/capabilities/: default.json
messenger-app/src-tauri/icons/: icon.icns
messenger-app/src-tauri/nsis/: hooks.nsi
messenger-app/src-tauri/src/: client.rs  commands.rs  db.rs  lib.rs  main.rs  store.rs
messenger-app/src/lib/: AudioPlayer.svelte  Avatar.svelte  Chat.svelte  ChatStats.svelte  DetailPanel.svelte  DeviceManager.svelte  GroupEventModal.svelte  LinkPreviewCard.svelte  MediaBar.svelte  MessagePane.svelte  PasswordPrompt.svelte  PollView.svelte  Register.svelte  SafetyNumbers.svelte  SearchModal.svelte  SettingsModal.svelte  Sidebar.svelte  SlashCommandPalette.svelte  StickerPicker.svelte  ThreadPane.svelte  VideoPlayer.svelte
messenger-crypto/: Cargo.toml
messenger-crypto/src/: error.rs  kdf.rs  keys.rs  lib.rs  ratchet.rs  sender_keys.rs  wire.rs  x3dh.rs
messenger-server/: Cargo.toml  Dockerfile
messenger-server/migrations/: 0001_users.sql  0002_prekey_bundles.sql  0003_auth_tokens.sql  0004_opk_pool.sql  0005_file_store.sql  0006_groups.sql  0007_sessions.sql  0008_admin.sql  0009_blocked_devices.sql  0010_key_log.sql  0012_polls.sql  0013_roles.sql  0014_channels.sql  0015_translation_cache.sql  0016_refresh_tokens.sql  0017_push_tokens.sql
messenger-server/src/: auth.rs  error.rs  lib.rs  main.rs  nats.rs  push.rs  state.rs
messenger-server/src/routes/: admin.rs  channels.rs  files.rs  groups.rs  health.rs  mod.rs  polls.rs  prekeys.rs  push.rs  refresh.rs  register.rs  sessions.rs  translate.rs  updates.rs  users.rs  ws.rs
messenger-server/tests/integration/: common.rs  main.rs
monitor/: alert.sh  check.sh
