[package]
name = "messenger-crypto"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
x25519-dalek = { version = "2", features = ["static_secrets", "serde"] }
ed25519-dalek = { version = "2", features = ["rand_core", "serde"] }
chacha20poly1305 = "0.10"
hkdf = "0.12"
sha2 = "0.10"
rand = "0.8"
rand_core = "0.6"
zeroize = { version = "1", features = ["derive"] }
thiserror = "2"
serde = { version = "1", features = ["derive"] }
postcard = { version = "1", features = ["use-std"] }
ml-kem = { version = "0.3", features = ["getrandom"] }

[dev-dependencies]
hex = "0.4"
