[package]
name = "messenger-server"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
messenger-crypto = { path = "../messenger-crypto", version = "0.1.0" }
axum          = { version = "0.8", features = ["ws", "macros"] }
tokio         = { version = "1",   features = ["full"] }
tower-http    = { version = "0.6", features = ["trace", "request-id", "propagate-header", "fs"] }
tracing       = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde         = { version = "1",   features = ["derive"] }
serde_json    = "1"
uuid          = { version = "1",   features = ["v4", "serde"] }
thiserror     = "2"
dashmap       = "6"
futures-util  = "0.3"
governor      = { version = "0.6", features = ["dashmap"] }
sqlx          = { version = "0.9", features = ["runtime-tokio", "tls-native-tls", "postgres", "uuid", "migrate", "chrono"] }
chrono        = { version = "0.4", features = ["serde"] }
sha2          = "0.10"
hex           = "0.4"
rand          = "0.8"
async-nats    = "0.37"
bytes         = "1"
axum-server   = { version = "0.7", features = ["tls-rustls"] }
rustls        = { version = "0.23", features = ["ring"] }
rcgen         = "0.12"

postcard     = { version = "1", features = ["use-std"] }
x25519-dalek = { version = "2", features = ["static_secrets", "serde"] }

[dev-dependencies]
tokio-tungstenite = "0.29"
reqwest           = { version = "0.12", features = ["json"] }
futures-util      = "0.3"
