[package]
name = "messenger-app"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
name = "messenger_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri          = { version = "2", features = ["tray-icon"] }
serde          = { version = "1", features = ["derive"] }
serde_json     = "1"
tokio          = { version = "1", features = ["full"] }
messenger-crypto = { path = "../../messenger-crypto" }
reqwest        = { version = "0.12", features = ["json"] }
tokio-tungstenite = { version = "0.29", features = ["native-tls"] }
native-tls        = "0.2"
futures-util   = "0.3"
postcard       = { version = "1", features = ["use-std"] }
thiserror      = "2"
tracing        = "0.1"
ed25519-dalek    = { version = "2", features = ["rand_core"] }
x25519-dalek     = { version = "2", features = ["static_secrets"] }
chacha20poly1305 = "0.10"
hkdf             = "0.12"
sha2             = "0.10"
rand             = "0.8"
argon2           = "0.5"
rusqlite         = { version = "0.32", features = ["bundled-full"] }
unicode-segmentation = "1.10"
uuid                 = { version = "1", features = ["v4"] }
tauri-plugin-notification = "2"
tauri-plugin-updater  = "2"
tauri-plugin-process  = "2"
